need to register matches and then auth
