# internal/handler/match.go
@@ -2,10 +2,11 @@ package handler
 
 import (
 	"encoding/json"
-	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
 
+	_ "github.com/cscercel/volleyball-tracker/internal/db" // ONLY required for Swagger to pick up db interfaces
 	"github.com/cscercel/volleyball-tracker/internal/service"
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
@@ -23,22 +24,49 @@ func (h *MatchHandler) RegisterRoutes(r chi.Router) {
 	r.Route("/matches", func(r chi.Router) {
 		r.Post("/", h.handleCreateMatch)
 		r.Get("/{id}", h.handleGetMatch)
-		r.Get("/registered", h.handleGetRegisteredMatches)
-		r.Get("/drafts", h.handleGetDrafts)
-		r.Get("/", h.handleGetSeasonMatches)
-		r.Put("/{id}", h.handleRegisterMatch)
-		r.Delete("/{id}", h.handleDeleteDraft)
+		r.Get("/", h.handleListMatchesBySeason)
+		r.Get("/uncompleted", h.handleListUncompletedMatches)
+		r.Delete("/{id}", h.handleDeleteUncompletedMatch)
+		r.Get("/{id}/roster", h.handleGetMatchPlayers)
 	})
 }
 
+// @Summary      Create Match
+// @Tags         matches
+// @Produce      json
+// @Param        body body      object{match_type=string, blue_team=[]string, red_team=[]string} true "Match Body"
+// @Success      201  {array}   db.Match
+// @Failure      400  {object}  object{error=string}
+// @Failure      500  {object}  object{error=string}
+// @Router       /api/v1/matches [post]
+func (h *MatchHandler) handleCreateMatch(w http.ResponseWriter, r *http.Request) {
+	var body struct {
+		MatchType 	string 		`json:"match_type"`
+		BlueTeam	[]string	`json:"blue_team"`
+		RedTeam		[]string	`json:"red_team"`
+	}
+
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		respondWithError(w, http.StatusBadRequest, "invalid request body", err)
+		return
+	}
+
+	match, err := h.service.CreateMatch(r.Context(), body.MatchType, body.BlueTeam, body.RedTeam)
+	if err != nil {
+		respondWithError(w, http.StatusInternalServerError, "could not create match", err)
+		return
+	}
+
+	respondWithJSON(w, http.StatusCreated, match)
+}
 
 // @Summary      Get Match
 // @Tags         matches
 // @Produce      json
-// @Param        id   path      string  true  "Match ID"
-// @Success      200  {array}   service.MatchWithPlayers
+// @Param        id   path      string                true  "Match UUID" format(uuid)
+// @Success      200  {array}   db.Match
 // @Failure      400  {object}  object{error=string}
-// @Failure      404  {object}  object{error=string}
+// @Failure      500  {object}  object{error=string}
 // @Router       /api/v1/matches/{id} [get]
 func (h *MatchHandler) handleGetMatch(w http.ResponseWriter, r *http.Request) {
 	matchID, err := uuid.Parse(chi.URLParam(r, "id"))
@@ -49,150 +77,66 @@ func (h *MatchHandler) handleGetMatch(w http.ResponseWriter, r *http.Request) {
 
 	match, err := h.service.GetMatch(r.Context(), matchID)
 	if err != nil {
-		respondWithError(w, http.StatusNotFound, "match not found", err)
+		respondWithError(w, http.StatusInternalServerError, "could not get match", err)
 		return
 	}
 
 	respondWithJSON(w, http.StatusOK, match)
 }
 
-// @Summary      Get Registered Matches
+// @Summary      List Matches By Season
 // @Tags         matches
 // @Produce      json
-// @Success      200  {array}   []service.MatchWithPlayers
-// @Failure      400  {object}  object{error=string}
-// @Failure      404  {object}  object{error=string}
-// @Router       /api/v1/matches/registered [get]
-func (h *MatchHandler) handleGetRegisteredMatches(w http.ResponseWriter, r *http.Request) {
-	matches, err := h.service.GetRegisteredMatches(r.Context())
-	if err != nil {
-		respondWithError(w, http.StatusNotFound, "matches not found", err)
-		return
-	}
-
-	respondWithJSON(w, http.StatusOK, matches)
-}
-
-// @Summary      Get Drafts
-// @Tags         matches
-// @Produce      json
-// @Success      200  {array}   []service.MatchWithPlayers
-// @Failure      400  {object}  object{error=string}
-// @Failure      404  {object}  object{error=string}
-// @Router       /api/v1/matches/drafts [get]
-func (h *MatchHandler) handleGetDrafts(w http.ResponseWriter, r *http.Request) {
-	drafts, err := h.service.GetRegisteredMatches(r.Context())
-	if err != nil {
-		respondWithError(w, http.StatusNotFound, "drafts not found", err)
-		return
-	}
-
-	respondWithJSON(w, http.StatusOK, drafts)
-}
-
-// @Summary      Get Season Matches
-// @Tags         matches
-// @Produce      json
-// @Param        match_type  path     string  true  "Match Type"
-// @Param        season  	path      string  true  "Season"
-// @Success      200  		{array}   []service.MatchWithPlayers
+// @Param        match_type query  		string  true  "Match Type"
+// @Param        season   	query      	integer true  "Season"
+// @Success      200  		{array}   []db.Match
 // @Failure      400  		{object}  object{error=string}
-// @Failure      404  		{object}  object{error=string}
+// @Failure      500  		{object}  object{error=string}
 // @Router       /api/v1/matches [get]
-func (h *MatchHandler) handleGetSeasonMatches(w http.ResponseWriter, r *http.Request) {
+func (h *MatchHandler) handleListMatchesBySeason(w http.ResponseWriter, r *http.Request) {
 	// Query params
 	matchType := r.URL.Query().Get("match_type")
-	if matchType == "" {
-		respondWithError(w, http.StatusBadRequest, "match_type is required", errors.New(""))
+	if matchType != "indoor" && matchType != "beach" {
+		respondWithError(w, http.StatusBadRequest, "invalid match type", 
+			fmt.Errorf("expected: `indoor` or `beach`, got: `%s`", matchType),
+		)
 		return
 	}
 
 	seasonStr := r.URL.Query().Get("season")
 	season, err := strconv.Atoi(seasonStr)
-	if err != nil || season < 1 {
-		respondWithError(w, http.StatusBadRequest, "season must be a positive number", err)
+	if err != nil || season < 2023 {
+		respondWithError(w, http.StatusBadRequest, "no season before 2023", err)
 		return
 	}
 
-	matches, err := h.service.GetSeasonMatches(r.Context(), matchType, season)
+	matches, err := h.service.ListMatchesBySeason(r.Context(), matchType, int32(season))
 	if err != nil {
-		respondWithError(w, http.StatusNotFound, "drafts not found", err)
+		respondWithError(w, http.StatusBadRequest, "could not get matches", err)
 		return
 	}
 
 	respondWithJSON(w, http.StatusOK, matches)
 }
 
-// @Summary      Create Match
+// @Summary      List Uncompleted Matches
 // @Tags         matches
 // @Produce      json
-// @Param        body body      object{match_type=string, blue_players=[]string, red_players=[]string} true "Match Body"
-// @Success      201  {array}   service.MatchWithPlayers
-// @Failure      400  {object}  object{error=string}
-// @Failure      500  {object}  object{error=string}
-// @Router       /api/v1/matches [post]
-func (h *MatchHandler) handleCreateMatch(w http.ResponseWriter, r *http.Request) {
-	var body struct {
-		MatchType	string 	 	`json:"match_type"`
-		BluePlayers	[]uuid.UUID `json:"blue_players"`
-		RedPlayers	[]uuid.UUID `json:"red_players"`
-	}
-
-	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
-		respondWithError(w, http.StatusBadRequest, "invalid request body", err)
-		return
-	}
-
-	// Get
-
-	match, err := h.service.CreateMatch(r.Context(), body.MatchType, body.BluePlayers, body.RedPlayers)
+// @Success      200  		{array}   []db.Match
+// @Failure      400  		{object}  object{error=string}
+// @Failure      500  		{object}  object{error=string}
+// @Router       /api/v1/matches/uncompleted [get]
+func (h *MatchHandler) handleListUncompletedMatches(w http.ResponseWriter, r *http.Request) {
+	matches, err := h.service.ListUncompletedMatches(r.Context())
 	if err != nil {
-		respondWithError(w, http.StatusInternalServerError, "could not create match", err)
+		respondWithError(w, http.StatusInternalServerError, "could not retrieve uncompleted matches", err)
 		return
 	}
 
-	respondWithJSON(w, http.StatusCreated, match)
+	respondWithJSON(w, http.StatusOK, matches)
 }
 
-// @Summary      Register Match
-// @Tags         matches
-// @Produce      json
-// @Param        id   path      string                				  true  "Match UUID" format(uuid)
-// @Param        body body      object{blue_score=int, red_score=int} true "Match Body"
-// @Success      200  {object}  service.MatchWithPlayers
-// @Failure      400  {object}  object{error=string}
-// @Failure      500  {object}  object{error=string}
-// @Router       /api/v1/matches/{id} [put]
-func (h *MatchHandler) handleRegisterMatch(w http.ResponseWriter, r *http.Request) {
-	matchID, err := uuid.Parse(chi.URLParam(r, "id"))
-	if err != nil {
-		respondWithError(w, http.StatusBadRequest, "invalid match id", err)
-		return
-	}
-
-	var body struct {
-		MatchID		uuid.UUID 	`json:"match_id"`
-		BlueScore 	int			`json:"blue_score"`
-		RedScore	int 		`json:"red_score"`
-	}
-
-	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
-		respondWithError(w, http.StatusBadRequest, "invalid request body", err)
-		return
-	}
-
-	body.MatchID = matchID
-
-	match, err := h.service.RegisterMatch(r.Context(), body.MatchID, body.BlueScore, body.RedScore)
-	if err != nil {
-		respondWithError(w, http.StatusInternalServerError, "could not register match", err)
-		return
-	}
-
-	respondWithJSON(w, http.StatusCreated, match)
-}
-
-// @Summary      Delete Match
+// @Summary      Delete Uncompleted Match
 // @Tags         matches
 // @Produce      json
 // @Param        id   path      string                true  "Match UUID" format(uuid)
@@ -200,17 +144,41 @@ func (h *MatchHandler) handleRegisterMatch(w http.ResponseWriter, r *http.Reques
 // @Failure      400  {object}  object{error=string}
 // @Failure      500  {object}  object{error=string}
 // @Router       /api/v1/matches/{id} [delete]
-func (h *MatchHandler) handleDeleteDraft(w http.ResponseWriter, r *http.Request) {
+func (h *MatchHandler) handleDeleteUncompletedMatch(w http.ResponseWriter, r *http.Request) {
 	matchID, err := uuid.Parse(chi.URLParam(r, "id"))
 	if err != nil {
 		respondWithError(w, http.StatusBadRequest, "invalid match id", err)
 		return
 	}
 
-	if err := h.service.DeleteDraft(r.Context(), matchID); err != nil {
-		respondWithError(w, http.StatusInternalServerError, "could not delete draft", err)
+	if err := h.service.DeleteUncompletedMatch(r.Context(), matchID); err != nil {
+		respondWithError(w, http.StatusInternalServerError, "could not delete match", err)
 		return
 	}
-	
+
 	respondWithJSON(w, http.StatusNoContent, "")
+}
+
+// @Summary      Get Match Players
+// @Tags         matches
+// @Produce      json
+// @Param        id   path      string                true  "Match UUID" format(uuid)
+// @Success      200  {array}   []db.GetMatchPlayersRow
+// @Failure      400  {object}  object{error=string}
+// @Failure      500  {object}  object{error=string}
+// @Router       /api/v1/matches/{id}/roster [get]
+func (h *MatchHandler) handleGetMatchPlayers(w http.ResponseWriter, r *http.Request) {
+	matchID, err := uuid.Parse(chi.URLParam(r, "id"))
+	if err != nil {
+		respondWithError(w, http.StatusBadRequest, "invalid match id", err)
+		return
+	}
+
+	match_players, err := h.service.GetMatchPlayers(r.Context(), matchID)
+	if err != nil {
+		respondWithError(w, http.StatusInternalServerError, "could not get match players", err)
+		return
+	}
+
+	respondWithJSON(w, http.StatusOK, match_players)
 }
